Color mode update

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
           <div class="box-container">
             <div class="box">
-              <p><span> phone : </span> +91 76673-90486</p>
+              <p><span> Phone : </span> +91 76673-90486</p>
             </div>
             <div class="box">
-              <p><span> email : </span> harshvardhanjha4@gmail.com</p>
-              <p><span> place : </span> Bihar, India - 848112</p>
+              <p><span> Email : </span> harshvardhanjha4@gmail.com</p>
+              <p><span> Place : </span> Samastipur, Bihar, India - 848112</p>
             </div>
           </div>
 
