Social media update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
-                            <span class="mr-2" style="font-size: 30px;">Hey frinds, I'm</span>
+                            <span class="mr-2" style="font-size: 30px;">Hey friends, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Harshvardhan Jha</span>
                                     <span class="animated-item">Web Designer</span>
@@ -305,9 +305,9 @@
                 </div>
 
                 <ul class="social-links">
-                     <li><a href="#" class="uil uil-facebook" data-toggle="tooltip" data-placement="left" title="Facebook"></a></li>
-                     <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
-                     <li><a href="#" class="uil uil-link" data-toggle="tooltip" data-placement="left" title="LinkedIn"></a></li>
+                     <li><a href="https://www.facebook.com/harshvardhan.jha.73/" class="uil uil-facebook" data-toggle="tooltip" data-placement="left" title="Facebook"></a></li>
+                     <li><a href="https://www.instagram.com/engineer_hoon__/" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
+                     <li><a href="https://www.linkedin.com/in/harshvardhan-jha-b60148159/" class="uil uil-link" data-toggle="tooltip" data-placement="left" title="LinkedIn"></a></li>
                 </ul>
             </div>
           </div>
